Add register page.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
@@ -3,6 +3,8 @@
 <body>
 	<div id="header" th:fragment="default">
 		<ul class="#main-menu">
+			<li><a href="/">Home</a></li>
+			<li><a href="/register">Register</a></li>
 		</ul>
 	</div>
 </body>
