Add login form.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
@@ -4,6 +4,7 @@
 	<div id="header" th:fragment="default">
 		<ul class="#main-menu">
 			<li><a href="/">Home</a></li>
+			<li><a href="/login">Login</a></li>
 			<li><a href="/register">Register</a></li>
 		</ul>
 	</div>
