--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/form.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/form.html
@@ -10,5 +10,10 @@
 		<option value="0">choose map...</option>
 		<option th:each="map : ${maps}" th:value="${map.id}" th:text="${map.name}"></option>
 	</select>
+	
+	<select th:name="${name}" th:fragment="difficulty-picker (name, levels)">
+		<option value="0">choose difficulty...</option>
+		<option th:each="level : ${levels}" th:value="${level.id}" th:text="${level.name}"></option>
+	</select>
 </body>
 </html>
