--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
@@ -8,7 +8,7 @@
 		</p>
 		<ul class="#main-menu">
 			<li><a href="/">Home</a></li>
-			<li th:if="${user != null}"><a href="/match/add">Add match</a></li>
+			<li th:if="${user != null}"><a href="/match/pick-type">Add match</a></li>
 			<li th:if="${user == null}"><a href="/login">Login</a></li>
 			<li th:if="${user == null}"><a href="/register">Register</a></li>
 		</ul>
