--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/form.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/form.html
@@ -6,14 +6,14 @@
 		<option th:each="player : ${players}" th:value="${player.id}" th:text="${player.login}"></option>
 	</select>
 	
-	<select th:fragment="map-picker (maps)">
+	<select th:fragment="map-picker (maps, value)">
 		<option value="0">choose map...</option>
-		<option th:each="map : ${maps}" th:value="${map.id}" th:text="${map.name}"></option>
+		<option th:each="map : ${maps}" th:value="${map.id}" th:text="${map.name}" th:selected="${map.id == value}"></option>
 	</select>
 	
-	<select th:fragment="difficulty-picker (levels)">
+	<select th:fragment="difficulty-picker (levels, value)">
 		<option value="0">choose difficulty...</option>
-		<option th:each="level : ${levels}" th:value="${level.id}" th:text="${level.name}"></option>
+		<option th:each="level : ${levels}" th:value="${level.id}" th:text="${level.name}" th:selected="${level.id == value}"></option>
 	</select>
 	
 </body>
