--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
@@ -9,7 +9,7 @@
 		<ul class="#main-menu">
 			<li><a href="/">Home</a></li>
 			<li><a href="/recent-matches">Recent matches</a></li>
-			<li th:if="${user != null}"><a href="/match/add/picker">Add match</a></li>
+			<li th:if="${user != null}"><a href="/new-match/add/picker">Add match</a></li>
 			<li th:if="${user == null}"><a href="/login">Login</a></li>
 			<li th:if="${user == null}"><a href="/register">Register</a></li>
 		</ul>
