--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="default">
-	<link rel="stylesheet" type="text/css" href="/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
 	<link rel="icon" type="image/png" href="/images/js.png" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title th:text="${pageTitle}"></title>
