Add bootstrap framework.

--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
@@ -2,8 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="default">
 	<link rel="stylesheet" type="text/css" href="/static/css/style.css" />
+	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title th:text="${pageTitle}"></title>
+	<script src="/static/js/bootstrap.js"></script>
 </head>
 <body>
 </body>
