--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.css" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title th:text="${pageTitle}"></title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="/static/js/bootstrap.js"></script>
 </head>
 <body>
