--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/head.html
@@ -7,6 +7,7 @@
 	<title th:text="${pageTitle}"></title>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="/static/js/bootstrap.js"></script>
+	<script src="https://www.google.com/jsapi"></script>
 </head>
 <body>
 </body>
