--- a/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
+++ b/l4d2-js-stats/src/main/webapp/WEB-INF/pages/templates/header.html
@@ -8,6 +8,7 @@
 				<li><a href="/recent-matches">Recent matches</a></li>
 				<li th:if="${user != null}"><a href="/new-match/add/picker">Add match</a></li>
 				<li th:if="${user != null}"><a class="user" th:href="${'/user/' + user.id}" th:text="${user.login}"></a></li>
+				<li th:if="${user != null}"><a href="/change-password">Change password</a></li>
 				<li th:if="${user != null}"><a href="/logout">Logout</a></li>
 				<li th:if="${user == null}"><a href="/login">Login</a></li>
 				<li th:if="${user == null}"><a href="/register">Register</a></li>
